--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "web-vitals": "^1.1.2"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "*"
+    "@babel/plugin-proposal-private-property-in-object": "*",
+    "html-webpack-plugin": "^5.6.0"
   },
   "scripts": {
     "start": "PORT=4000 react-scripts start",
